--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-config-prettier": "^3.4.0",
 		"eslint-plugin-babel": "^5.3.0",
 		"html-webpack-plugin": "^3.2.0",
+		"jsdom-quokka-plugin": "^1.0.14",
 		"node-sass": "^4.12.0",
 		"prettier": "^1.18.2",
 		"sass-loader": "^7.1.0",
@@ -41,5 +42,13 @@
 	},
 	"dependencies": {
 		"gh-pages": "^2.0.1"
+	},
+	"quokka": {
+		"plugins": [
+			"jsdom-quokka-plugin"
+		],
+		"jsdom": {
+			"file": "./src/index.html"
+		}
 	}
 }
